# bench

./: .gitignore  LICENSE  README.md  bench.mplstyle  bench.py  connect.py  license  pyproject.toml  readme.md  requirements.txt
functiongenerator/: edu33210.py
oscilloscope/: argtest.ipynb  dsox120x.py  mso2014x.py  oscilloscope.py
oscilloscope/.ipynb_checkpoints/: argtest-checkpoint.ipynb
oscilloscope/.virtual_documents/: argtest.ipynb
powersupply/: e36300.py
