[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bench"
version = "0.0.3"
authors = [
  { name="Alessandro Rizzoni", email="rizzoni.alex@gmail.com" },
]
description = ""
readme = "readme.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: GPLv3",
    "Operating System :: OS Independent",
]
dependencies = [
  "pyvisa",
]

[project.urls]
"Homepage" = ""
"Bug Tracker" = ""
